test/extension/load_extension.test
# name: test/extension/load_extension.test
# description: Try loading a shared object with an extension
# group: [extension]

require notmingw

require skip_reload

statement ok
PRAGMA enable_verification

statement error
LOAD 'asdf';
----
asdf.duckdb_extension" not found.

statement error
LOAD 'Makefile';
----
Makefile.duckdb_extension" not found.

statement error
LOAD NULL;
----
Parser Error: syntax error at or near "NULL"
LINE 1: LOAD NULL;
             ^

statement ok
LOAD '__BUILD_DIRECTORY__/test/extension/loadable_extension_demo.duckdb_extension';

query I
SELECT hello('World');
----
10

query I
QUACK QUACK QUACK
----
QUACK
QUACK
QUACK

query I
quACk QUaCk
----
QUACK
QUACK

statement error
QUAC
----
Parser Error: Did you mean... QUACK!?

statement error
QUACK NOT QUACK
----
Parser Error: This is not a quack: not

query I
SELECT contains(loaded_extensions(), 'loadable_extension_demo')
----
true
